Refactored minor layout issues

--- a/UI/components/Contacts/Contacts.module.scss
+++ b/UI/components/Contacts/Contacts.module.scss
@@ -4,6 +4,10 @@
 .contactHeadline {
   color: $gray400;
 
+  &:first-child {
+    margin-top: 0;
+  }
+
   &:not(:first-child) {
     margin-top: 34px;
 
